--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
     margin-top: 20px;
 }
 
+        .contact-card1 {
+            width: 350px;
+            height: 95px;
+            border: none;
+            display: flex;
+            justify-content: space-between; /* Align items with space between them */
+            align-items: center; /* Center vertically */
+            border-radius: 10px;
+            background-color: #f0f0f0;
+            margin-bottom: 5px; /* Add margin between cards */
+        }
         .contact-card {
             width: 340px;
             height: 85px;
@@ -110,7 +121,7 @@
     
     <div class="contact-container">
         <h3 style="text-align:center;"><b>OFFICE OF THE HONORABLE MINISTER</b><br><span class="st2">11 Floor</span></h3>
-        <div class="contact-card">
+        <div class="contact-card1">
             <div class="contact-details">
                 <div class="contact-image-container">
                     <img class="contact-image" src="R.jpeg" alt="Profile Image">
