--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
             </script>
         </div>
 
+        <h3 style="text-align:center;"><b>OTHER OFFICERS</b><br><span class="st2">MINISTRY OFFICE</span></h3>
 
         <div class="contact-card">
             <div class="contact-details">
@@ -240,7 +241,7 @@
             </script>
         </div>
 
-        <h3 style="text-align:center;"><b>OTHER OFFICERS</b><br><span class="st2">SYSTEM-B</span></h3>
+      
 
         <div class="contact-card">
             <div class="contact-details">
