--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <img class="contact-image" src="one.jpg" alt="Profile Image">
                 </div>
                 <div>
-                    <div class="name">Mr.Ravindra Samarawickrama<br>
+                    <div class="name">Mr.R Samarawickrama<br>
                         <span class="disgnation">Private Secretary</span><br>
                         <p>
                          In.Com: <span id="">213</span><br> 
@@ -278,7 +278,7 @@
                     <img class="contact-image" src="one.jpg" alt="Profile Image">
                 </div>
                 <div>
-                    <div class="name">Major Dimuth Mahaliyana (Reted)<br>
+                    <div class="name">Major-D.Mahaliyana(Reted)<br>
                         <span class="disgnation">Co-ordinating Secretary</span><br>
                         <p>
                          
@@ -308,7 +308,7 @@
                     <img class="contact-image" src="one.jpg" alt="Profile Image">
                 </div>
                 <div>
-                    <div class="name">Mr.D.Suranga Amarathunaga<br>
+                    <div class="name">Mr.D.S Amarathunaga<br>
                         <span class="disgnation">Media Secretary</span><br>
                         <p>
                         
