--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
             align-items: center;
             margin-right: 10px;
         }
-
+        .contact-image1 {
+            width: 50px;
+            height: 50px;
+            object-fit: cover;
+            
+        }
         .contact-image {
             width: 50px;
             height: 50px;
@@ -124,7 +129,7 @@
         <div class="contact-card1">
             <div class="contact-details">
                 <div class="contact-image-container">
-                    <img class="contact-image" src="R.jpeg" alt="Profile Image">
+                    <img class="contact-image1" src="R.png" alt="Profile Image">
                 </div>
                 <div>
                     <div class="name">MINISTRY OFFICE<br>
