--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                     <img class="contact-image" src="one.jpg" alt="Profile Image">
                 </div>
                 <div>
-                    <div class="name">D.Mahaliyana(Major-Reted)<br>
+                    <div class="name">Major:D.Mahaliyana<br>
                         <span class="disgnation">Co-ordinating Secretary</span><br>
                         <p>
                          
