--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="contact-card">
             <div class="contact-details">
                 <div class="contact-image-container">
-                    <img class="contact-image" src="1.jpg" alt="Profile Image">
+                    <img class="contact-image" src="1.jpeg" alt="Profile Image">
                 </div>
                 <div>
                     <div class="name">Hon.Lal kantha<br>
